--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Create Release
+name: Create or Update Release
 
 on:
   push:
@@ -17,23 +17,12 @@ jobs:
     - name: Zip project
       run: zip -r mmg-checkout-payment.zip . -x "*.git*"
 
-    - name: Create Release
+    - name: Create or Update Release
       id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: softprops/action-gh-release@v1
       with:
+        files: ./mmg-checkout-payment.zip
         tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+        name: Release ${{ github.ref }}
         draft: false
         prerelease: false
-
-    - name: Upload Release Asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./mmg-checkout-payment.zip
-        asset_name: mmg-checkout-payment.zip
-        asset_content_type: application/zip
