--- a/.github/workflows/update-version.yml
+++ b/.github/workflows/update-version.yml
@@ -13,6 +13,10 @@ jobs:
       with:
         fetch-depth: 0
     - name: Update version in main.php
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
         chmod +x .github/scripts/update-version.sh
         .github/scripts/update-version.sh
