--- a/.github/workflows/update-version.yml
+++ b/.github/workflows/update-version.yml
@@ -16,7 +16,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
+        git config --local user.email "carl@kalpa.dev"
+        git config --local user.name "Carl Handy"
         chmod +x .github/scripts/update-version.sh
         .github/scripts/update-version.sh
