--- a/.github/workflows/update-version.yml
+++ b/.github/workflows/update-version.yml
@@ -12,9 +12,10 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
+        token: ${{ secrets.PAT }}
     - name: Update version in main.php
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.PAT }}
       run: |
         git config --local user.email "carl@kalpa.dev"
         git config --local user.name "Carl Handy"
