--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -31,3 +31,6 @@ jobs:
 
     - name: Install dependencies
       run: composer install --
+
+    - name: Run PHPUnit tests
+      run: vendor/bin/phpunit
