--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -20,7 +20,7 @@ jobs:
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
-    - name: Setup WordPress Test Suite
+    - name: Setup WordPress Test Suite and MySQL
       run: |
         # Wait for MySQL to be ready
         until mysqladmin ping -hmysql -uroot -prootpassword; do
