--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -16,8 +16,8 @@ jobs:
         env:
           MYSQL_ROOT_PASSWORD: rootpassword
         ports:
-          - 3306
-        options: --health-cmd="mysqladmin ping -h mysql" --health-interval=10s --health-timeout=5s --health-retries=3
+          - 3306:3306  # Expose MySQL port
+        options: --health-cmd="mysqladmin ping -h localhost" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
     - name: Setup WordPress Test Suite and MySQL
