--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -52,9 +52,23 @@ jobs:
         tools: composer:v2
 
     - name: Install dependencies
-      run: composer install --
+      run: composer install
 
     - name: Run PHPUnit tests
       env:
+        COMPOSER_PROCESS_TIMEOUT: 0
+        COMPOSER_NO_INTERACTION: 1
+        COMPOSER_NO_AUDIT: 1
         WP_TESTS_PATH: /home/runner/wordpress-tests/wordpress-develop/tests/phpunit
-      run: vendor/bin/phpunit --bootstrap tests/bootstrap.php
+        WP_PHPUNIT__DIR: /path/to/wordpress-tests-lib
+        DB_NAME: your_db_name
+        DB_USER: your_db_user
+        DB_PASSWORD: your_db_password
+        DB_HOST: 127.0.0.1
+      run: |
+        sudo service mysql start
+        mysql -e 'CREATE DATABASE IF NOT EXISTS your_db_name;'
+        mysql -e "CREATE USER 'your_db_user'@'localhost' IDENTIFIED BY 'your_db_password';"
+        mysql -e "GRANT ALL PRIVILEGES ON your_db_name.* TO 'your_db_user'@'localhost';"
+        mysql -e 'FLUSH PRIVILEGES;'
+        vendor/bin/phpunit --bootstrap tests/bootstrap.php
