--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -61,14 +61,14 @@ jobs:
         COMPOSER_NO_AUDIT: 1
         WP_TESTS_PATH: /home/runner/wordpress-tests/wordpress-develop/tests/phpunit
         WP_PHPUNIT__DIR: /path/to/wordpress-tests-lib
-        DB_NAME: your_db_name
-        DB_USER: your_db_user
-        DB_PASSWORD: your_db_password
+        DB_NAME: wordpress_test
+        DB_USER: root
+        DB_PASSWORD: rootpassword
         DB_HOST: 127.0.0.1
       run: |
         sudo service mysql start
-        mysql -e 'CREATE DATABASE IF NOT EXISTS your_db_name;'
-        mysql -e "CREATE USER 'your_db_user'@'localhost' IDENTIFIED BY 'your_db_password';"
-        mysql -e "GRANT ALL PRIVILEGES ON your_db_name.* TO 'your_db_user'@'localhost';"
+        mysql -e 'CREATE DATABASE IF NOT EXISTS wordpress_test;'
+        mysql -e "CREATE USER 'root'@'localhost' IDENTIFIED BY 'rootpassword';"
+        mysql -e "GRANT ALL PRIVILEGES ON wordpress_test.* TO 'root'@'localhost';"
         mysql -e 'FLUSH PRIVILEGES;'
         vendor/bin/phpunit --bootstrap tests/bootstrap.php
