--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -48,6 +48,11 @@ jobs:
     - name: Install dependencies
       run: composer install
 
+    - name: Install WooCommerce
+      run: |
+        cd /home/runner/wordpress-tests/wordpress-develop
+        composer require woocommerce/woocommerce
+
     - name: Run PHPUnit tests
       env:
         COMPOSER_PROCESS_TIMEOUT: 0
@@ -65,4 +70,7 @@ jobs:
           echo "Waiting for MySQL to be ready..."
           sleep 2
         done
+        # Set WP_PLUGIN_DIR environment variable
+        export WP_PLUGIN_DIR=/home/runner/wordpress-tests/wordpress-develop/src/wp-content/plugins
+        # Run PHPUnit tests
         vendor/bin/phpunit --bootstrap tests/bootstrap.php
