--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -51,6 +51,7 @@ jobs:
     - name: Install WooCommerce
       run: |
         cd /home/runner/wordpress-tests/wordpress-develop
+        composer config --no-plugins allow-plugins.composer/installers true
         composer require woocommerce/woocommerce
 
     - name: Run PHPUnit tests
