--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -54,6 +54,7 @@ jobs:
         composer config --no-plugins allow-plugins.composer/installers true
         composer require woocommerce/woocommerce
         cd /home/runner/work/mmg-wp-plugin/mmg-wp-plugin
+        composer config --no-plugins allow-plugins.composer/installers true
         composer require woocommerce/woocommerce
 
     - name: Run PHPUnit tests
