--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -45,8 +45,13 @@ jobs:
         extensions: mbstring, intl, mysqli, zip
         tools: composer:v2
 
+    - name: Update Composer dependencies
+      run: |
+        composer update --no-interaction --no-progress
+        composer require woocommerce/woocommerce:^8.0 --no-interaction --no-progress
+
     - name: Install dependencies
-      run: composer install
+      run: composer install --no-interaction --no-progress
 
     - name: Run PHPUnit tests
       env:
