--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -47,6 +47,7 @@ jobs:
 
     - name: Update Composer dependencies
       run: |
+        composer config --no-plugins allow-plugins.composer/installers true
         composer update --no-interaction --no-progress
         composer require woocommerce/woocommerce:^7.0 --no-interaction --no-progress
 
