--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -48,6 +48,7 @@ jobs:
     - name: Update Composer dependencies
       run: |
         composer config --no-plugins allow-plugins.composer/installers true
+        composer config --no-plugins allow-plugins.automattic/jetpack-autoloader true
         composer update --no-interaction --no-progress
         composer require woocommerce/woocommerce:^7.0 --no-interaction --no-progress
 
