--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -50,12 +50,7 @@ jobs:
         composer config --no-plugins allow-plugins.composer/installers true
         composer config --no-plugins allow-plugins.automattic/jetpack-autoloader true
         composer update --no-interaction --no-progress
-        composer require woocommerce/woocommerce:^5.9.1 --no-interaction --no-progress
-
-    - name: Move WooCommerce to WordPress plugins directory
-      run: |
-        mkdir -p /home/runner/wordpress-tests/wordpress-develop/src/wp-content/plugins/woocommerce
-        mv vendor/woocommerce/woocommerce/* /home/runner/wordpress-tests/wordpress-develop/src/wp-content/plugins/woocommerce/
+        composer require --dev woocommerce/woocommerce:^5.9.1 --no-interaction --no-progress
 
     - name: Install dependencies
       run: composer install --no-interaction --no-progress
