--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -58,10 +58,12 @@ jobs:
 
     - name: Install WooCommerce
       run: |
-        mkdir -p wp-content/plugins/woocommerce
+        mkdir -p wp-content/plugins
         wget https://downloads.wordpress.org/plugin/woocommerce.5.9.1.zip
-        unzip woocommerce.5.9.1.zip -d wp-content/plugins/
+        unzip -q woocommerce.5.9.1.zip -d wp-content/plugins/
         rm woocommerce.5.9.1.zip
+        echo "WooCommerce installation complete. Listing wp-content/plugins directory:"
+        ls -R wp-content/plugins
 
     - name: Check WooCommerce installation
       run: |
