--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,32 +45,24 @@ jobs:
     - name: Zip project
       run: zip -r mmg-checkout-payment.zip . -x "*.git*" -x "tests/*" -x "bin/*" -x "composer.json" -x "phpunit.xml" -x "README.md" -x "*.DS_Store" -x "build-phar.sh"
 
-    - name: Check for existing release
-      id: check_release
+    - name: Get Release
+      id: get_release
       run: |
         release_id=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
           "https://api.github.com/repos/${{ github.repository }}/releases/tags/${{ github.ref_name }}" \
           | jq -r '.id')
+        upload_url=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          "https://api.github.com/repos/${{ github.repository }}/releases/$release_id" \
+          | jq -r '.upload_url')
         echo "release_id=$release_id" >> $GITHUB_OUTPUT
-
-    - name: Create Release
-      if: steps.check_release.outputs.release_id == 'null'
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        draft: false
-        prerelease: false
+        echo "upload_url=$upload_url" >> $GITHUB_OUTPUT
 
     - name: Upload Release Asset
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url || format('https://uploads.github.com/repos/{0}/releases/{1}/assets{{?name,label}}', github.repository, steps.check_release.outputs.release_id) }}
+        upload_url: ${{ steps.get_release.outputs.upload_url }}
         asset_path: ./mmg-checkout-payment.zip
         asset_name: mmg-checkout-payment.zip
         asset_content_type: application/zip
