--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,7 +46,10 @@ jobs:
       run: zip -r mmg-checkout-payment.zip . -x "*.git*" -x "tests/*" -x "bin/*" -x "composer.json" -x "phpunit.xml" -x "README.md" -x "*.DS_Store" -x "build-phar.sh"
 
     - name: Setup GitHub CLI
-      uses: cli/setup-gh@v1
+      uses: actions/setup-go@v4
+      with:
+        go-version: '>=1.18.0'
+    - run: go install github.com/cli/cli/v2/cmd/gh@latest
 
     - name: Upload Release Asset
       env:
