--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -26,4 +26,4 @@ jobs:
         run: composer install
 
       - name: Run PHP CodeSniffer
-        run: vendor/bin/phpcs -p --standard=phpcs.xml --ignore=*/vendor/*
+        run: vendor/bin/phpcs -p --standard=phpcs.xml --runtime-set ignore_warnings_on_exit 1
