--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -20,14 +20,13 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '7.4'
-          tools: composer:v2
+          tools: composer:v2, cs2pr
 
       - name: Install dependencies
         run: composer install
 
       - name: Run PHP CodeSniffer
-        run: |
-          vendor/bin/phpcs -p --standard=phpcs.xml --report=checkstyle --runtime-set ignore_warnings_on_exit 1 | cs2pr
+        run: vendor/bin/phpcs -p --standard=phpcs.xml --report=checkstyle --runtime-set ignore_warnings_on_exit 1 | cs2pr
 
       - name: Post PHPCS results as PR comment
         uses: actions/github-script@v6
