--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -26,7 +26,7 @@ jobs:
         run: composer install
 
       - name: Run PHP CodeSniffer
-        run: vendor/bin/phpcs -p --standard=phpcs.xml --report=checkstyle --runtime-set ignore_warnings_on_exit 1 | cs2pr
+        run: vendor/bin/phpcs -p --standard=phpcs.xml --report=full --runtime-set ignore_warnings_on_exit 1 > phpcs-results.txt
 
       - name: Post PHPCS results as PR comment
         uses: actions/github-script@v6
@@ -36,9 +36,11 @@ jobs:
           script: |
             const fs = require('fs');
             const phpcsOutput = fs.readFileSync('phpcs-results.txt', 'utf8');
+            const summary = phpcsOutput.split('\n').slice(0, 10).join('\n'); // Get first 10 lines for summary
+            const fullReport = '## PHP CodeSniffer Results\n\n<details><summary>Click to expand full report</summary>\n\n```\n' + phpcsOutput + '\n```\n</details>';
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '## PHP CodeSniffer Results\n\n```\n' + phpcsOutput + '\n```'
+              body: '## PHP CodeSniffer Summary\n\n```\n' + summary + '\n```\n\n' + fullReport
             });
