--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -8,6 +8,10 @@ on:
     paths:
       - '**.php'
 
+permissions:
+  contents: read
+  pull-requests: write
+
 jobs:
   phpcs:
     name: PHP CodeSniffer
@@ -20,7 +24,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '7.4'
-          tools: composer:v2, cs2pr
+          tools: composer:v2
 
       - name: Install dependencies
         run: composer install
@@ -29,8 +33,8 @@ jobs:
         run: vendor/bin/phpcs -p --standard=phpcs.xml --report=full --runtime-set ignore_warnings_on_exit 1 > phpcs-results.txt
 
       - name: Post PHPCS results as PR comment
-        uses: actions/github-script@v6
         if: github.event_name == 'pull_request'
+        uses: actions/github-script@v6
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
