--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -100,6 +100,10 @@ jobs:
           echo "Waiting for MySQL to be ready..."
           sleep 2
         done
+        # Install WP-CLI
+        curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
+        chmod +x wp-cli.phar
+        sudo mv wp-cli.phar /usr/local/bin/wp
         # Set WP_PLUGIN_DIR environment variable
         export WP_PLUGIN_DIR=$(pwd)/wp-content/plugins
         # Copy WooCommerce to WordPress test environment
