--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -1,10 +1,6 @@
 name: PHPUnit Tests
 
-on:
-  pull_request:
-  push:
-    branches:
-      - main
+on: [push, pull_request]
 
 permissions:
   contents: read
@@ -13,18 +9,21 @@ permissions:
 jobs:
   test:
     runs-on: ubuntu-latest
-    
+
     services:
       mysql:
-        image: mysql:8.0
+        image: mysql:5.7
         env:
           MYSQL_ROOT_PASSWORD: rootpassword
           MYSQL_DATABASE: wordpress_test
         ports:
           - 3306:3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+        options: --health-cmd="mysqladmin ping --silent" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
     - name: Setup WordPress Test Suite
       run: |
         mkdir -p /home/runner/wordpress-tests
@@ -37,12 +36,11 @@ jobs:
         sed -i "s/yourusernamehere/root/g" wp-tests-config.php
         sed -i "s/yourpasswordhere/rootpassword/g" wp-tests-config.php
         sed -i "s/localhost/127.0.0.1/g" wp-tests-config.php
+        echo "WordPress Test Suite setup completed"
       env:
         WP_TESTS_PATH: /home/runner/wordpress-tests/wordpress-develop/tests/phpunit
 
-    - uses: actions/checkout@v2
-
-    - name: Install PHP
+    - name: Setup PHP
       uses: shivammathur/setup-php@v2
       with:
         php-version: '7.4'
@@ -105,8 +103,24 @@ jobs:
         # Copy WooCommerce to WordPress test environment
         mkdir -p /home/runner/wordpress-tests/wordpress-develop/src/wp-content/plugins
         cp -r wp-content/plugins/woocommerce /home/runner/wordpress-tests/wordpress-develop/src/wp-content/plugins/
+        # Modify bootstrap.php to load, initialize WooCommerce, and create tables
+        cat << EOF >> /home/runner/wordpress-tests/wordpress-develop/tests/phpunit/includes/bootstrap.php
+        // Load WooCommerce
+        require_once '/home/runner/wordpress-tests/wordpress-develop/src/wp-content/plugins/woocommerce/woocommerce.php';
+        // Initialize WooCommerce
+        \$GLOBALS['woocommerce'] = WC();
+        // Ensure WooCommerce is fully loaded
+        do_action( 'woocommerce_loaded' );
+        // Run WooCommerce installation
+        WC_Install::install();
+        // Flush rewrite rules
+        \$GLOBALS['wp_rewrite']->init();
+        flush_rewrite_rules();
+        EOF
         # Run PHPUnit tests and save output
-        vendor/bin/phpunit --bootstrap tests/bootstrap.php --debug --verbose --configuration phpunit.xml > phpunit-results.txt
+        cd /home/runner/wordpress-tests/wordpress-develop
+        vendor/bin/phpunit --bootstrap tests/phpunit/includes/bootstrap.php --debug --verbose --configuration phpunit.xml > phpunit-results.txt
+        cat phpunit-results.txt # Add this line to display the results in the log
         # Check if any tests failed and set output
         if grep -q "FAILURES!" phpunit-results.txt; then
           echo "tests_failed=true" >> $GITHUB_OUTPUT
