--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -128,6 +128,9 @@ jobs:
           echo "tests_failed=false" >> $GITHUB_OUTPUT
         fi
 
+    - name: List files in current directory
+      run: ls -al
+
     - name: Upload PHPUnit results
       if: always()
       uses: actions/upload-artifact@v2
