--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -80,14 +80,6 @@ jobs:
           exit 1
         fi
 
-    - name: Configure PHPUnit
-      run: |
-        cd /home/runner/wordpress-tests/wordpress-develop
-        if [ ! -f phpunit.xml ]; then
-          wget https://raw.githubusercontent.com/WordPress/wordpress-develop/master/phpunit.xml.dist -O phpunit.xml
-        fi
-        echo "PHPUnit configuration setup completed"
-    
     - name: Run PHPUnit tests
       id: run-tests
       env:
@@ -125,10 +117,12 @@ jobs:
         \$GLOBALS['wp_rewrite']->init();
         flush_rewrite_rules();
         EOF
+        # Copy phpunit.xml from the repository root to the test environment
+        cp $GITHUB_WORKSPACE/phpunit.xml /home/runner/wordpress-tests/wordpress-develop
         # Run PHPUnit tests and save output
         cd /home/runner/wordpress-tests/wordpress-develop
         vendor/bin/phpunit --bootstrap tests/phpunit/includes/bootstrap.php --debug --verbose --configuration phpunit.xml > /home/runner/wordpress-tests/wordpress-develop/phpunit-results.txt
-        cat /home/runner/wordpress-tests/wordpress-develop/phpunit-results.txt # Add this line to display the results in the log
+        cat /home/runner/wordpress-tests/wordpress-develop/phpunit-results.txt
         # Check if any tests failed and set output
         if grep -q "FAILURES!" /home/runner/wordpress-tests/wordpress-develop/phpunit-results.txt; then
           echo "tests_failed=true" >> $GITHUB_OUTPUT
